--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230321.0",
+    "prettier": "^2.8.7",
     "typescript": "^5.0.2",
     "wrangler": "2.13.0"
   },
   "private": true,
   "scripts": {
+    "format": "prettier --write  '*.{js,ts}' 'src/**/*.{js,ts}'",
     "start": "wrangler dev",
     "deploy": "wrangler publish"
   },
