--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "slack-chatgpt",
   "version": "0.0.0",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230321.0",
-    "prettier": "^2.8.7",
-    "typescript": "^5.0.2",
-    "wrangler": "2.13.0"
+    "@cloudflare/workers-types": "^4.20230922.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
+    "wrangler": "3.10.1"
   },
   "private": true,
   "scripts": {
     "format": "prettier --write  '*.{js,ts}' 'src/**/*.{js,ts}'",
     "start": "wrangler dev",
-    "deploy": "wrangler publish"
+    "deploy": "wrangler deploy",
+    "tail": "wrangler tail"
   },
   "dependencies": {
-    "@slack/web-api": "^6.8.1",
-    "openai": "^3.2.1"
+    "@cloudflare/ai": "^1.0.14",
+    "@slack/web-api": "^6.9.0",
+    "openai": "^4.11.0"
   }
 }
