--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,6 @@
-name = "slack-chatgpt"
+name = "slack-llama"
 main = "src/index.ts"
-compatibility_date = "2023-03-02"
+compatibility_date = "2023-10-02"
+
+[ai]
+binding = "AI"
